added recent, popular

--- a/src/main/resources/spring-frontend/fragments/footer_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/footer_fragment.html
@@ -71,14 +71,17 @@
             </div>
             <div class="row-block">
                 <ul class="menu menu_vt Footer-menu">
-                    <li class="menu-item"><a class="menu-link" href="/index.html" th:href="@{/}">Главная</a>
+                    <li class="menu-item"><a class="menu-link" href="/index.html"
+                                             th:href="@{/}">Главная</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/genres/index.html"
                                              th:href="@{/genres}">Жанры</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+                    <li class="menu-item"><a class="menu-link" href="/books/recent.html"
+                                             th:href="@{/books/recent}">Новинки</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+                    <li class="menu-item"><a class="menu-link" href="/books/popular.html"
+                                             th:href="@{/books/popular}">Популярное</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/authors/index.html"
                                              th:href="@{/authors}">Авторы</a>
