--- a/src/main/resources/spring-frontend/fragments/footer_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/footer_fragment.html
@@ -90,7 +90,8 @@
             </div>
             <div class="row-block">
                 <ul class="menu menu_vt Footer-menu">
-                    <li class="menu-item"><a class="menu-link" href="/signin.html">Войти</a>
+                    <li class="menu-item"><a class="menu-link" href="/signin.html"
+                                             th:href="@{/signin}">Войти</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/documents/index.html">Документы</a>
                     </li>
