--- a/src/main/resources/spring-frontend/fragments/footer_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/footer_fragment.html
@@ -93,13 +93,17 @@
                     <li class="menu-item"><a class="menu-link" href="/signin.html"
                                              th:href="@{/signin}">Войти</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/documents/index.html">Документы</a>
+                    <li class="menu-item"><a class="menu-link" href="/documents/index.html"
+                                             th:href="@{/documents}">Документы</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/about.html">О компании</a>
+                    <li class="menu-item"><a class="menu-link" href="/about.html"
+                                             th:href="@{/about}">О компании</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/faq.html">Помощь</a>
+                    <li class="menu-item"><a class="menu-link" href="/faq.html"
+                                             th:href="@{/faq}">Помощь</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/contacts.html">Контакты</a>
+                    <li class="menu-item"><a class="menu-link" href="/contacts.html"
+                                             th:href="@{/contacts}">Контакты</a>
                     </li>
                 </ul>
             </div>
