--- a/src/main/resources/spring-frontend/fragments/header_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/header_fragment.html
@@ -81,20 +81,25 @@
         <div class="wrap">
             <nav class="menuModal" id="navigate">
                 <ul class="menu menu_main">
-                    <li class="menu-item"><a class="menu-link" href="/index.html"
-                                             th:href="@{/}">Главная</a>
+                    <li class="menu-item"
+                        th:class="${#httpServletRequest.requestURI == '/'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
+                        <a class="menu-link" href="/index.html" th:href="@{/}">Главная</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/genres/index.html"
-                                             th:href="@{/genres}">Жанры</a>
+                    <li class="menu-item"
+                        th:class="${#httpServletRequest.requestURI == '/genres'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
+                        <a class="menu-link" href="/genres/index.html" th:href="@{/genres}">Жанры</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/recent.html"
-                                             th:href="@{/books/recent}">Новинки</a>
+                    <li class="menu-item"
+                        th:class="${#httpServletRequest.requestURI == '/books/recent'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
+                        <a class="menu-link" href="/books/recent.html" th:href="@{/books/recent}">Новинки</a>
                     </li>
-                    <li class="menu-item"><a class="menu-link" href="/books/popular.html"
-                                             th:href="@{/books/popular}">Популярное</a>
+                    <li class="menu-item"
+                        th:class="${#httpServletRequest.requestURI == '/books/popular'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
+                        <a class="menu-link" href="/books/popular.html" th:href="@{/books/popular}">Популярное</a>
                     </li>
-                    <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/authors/index.html"
-                                                              th:href="@{/authors}">Авторы</a>
+                    <li class="menu-item"
+                        th:class="${#httpServletRequest.requestURI == '/authors'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
+                        <a class="menu-link" href="/authors/index.html" th:href="@{/authors}">Авторы</a>
                     </li>
                 </ul>
             </nav>
