--- a/src/main/resources/spring-frontend/fragments/footer_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/footer_fragment.html
@@ -68,23 +68,36 @@
                     </a>
                     </li>
                 </ul>
+                <p>
+                    <span th:text="#{footer.chooseLanguage}">Выбор языка</span>
+                    <select id="locales">
+                        <option value=" "></option>
+                        <option value="en">English</option>
+                        <option value="ru">Русский</option>
+                    </select>
+                </p>
             </div>
             <div class="row-block">
                 <ul class="menu menu_vt Footer-menu">
                     <li class="menu-item"><a class="menu-link" href="/index.html"
-                                             th:href="@{/}">Главная</a>
+                                             th:href="@{/}"
+                                             th:text="#{topbar.main}">Главная</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/genres/index.html"
-                                             th:href="@{/genres}">Жанры</a>
+                                             th:href="@{/genres}"
+                                             th:text="#{topbar.genres}">Жанры</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/books/recent.html"
-                                             th:href="@{/books/recent}">Новинки</a>
+                                             th:href="@{/books/recent}"
+                                             th:text="#{topbar.news}">Новинки</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/books/popular.html"
-                                             th:href="@{/books/popular}">Популярное</a>
+                                             th:href="@{/books/popular}"
+                                             th:text="#{topbar.popular}">Популярное</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/authors/index.html"
-                                             th:href="@{/authors}">Авторы</a>
+                                             th:href="@{/authors}"
+                                             th:text="#{topbar.authors}">Авторы</a>
                     </li>
                 </ul>
             </div>
