--- a/src/main/resources/spring-frontend/fragments/header_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/header_fragment.html
@@ -83,23 +83,33 @@
                 <ul class="menu menu_main">
                     <li class="menu-item"
                         th:class="${#httpServletRequest.requestURI == '/'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
-                        <a class="menu-link" href="/index.html" th:href="@{/}">Главная</a>
+                        <a class="menu-link" href="/index.html"
+                           th:href="@{/}"
+                           th:text="#{topbar.main}">Главная</a>
                     </li>
                     <li class="menu-item"
                         th:class="${#httpServletRequest.requestURI == '/genres'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
-                        <a class="menu-link" href="/genres/index.html" th:href="@{/genres}">Жанры</a>
+                        <a class="menu-link" href="/genres/index.html"
+                           th:href="@{/genres}"
+                           th:text="#{topbar.genres}">Жанры</a>
                     </li>
                     <li class="menu-item"
                         th:class="${#httpServletRequest.requestURI == '/books/recent'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
-                        <a class="menu-link" href="/books/recent.html" th:href="@{/books/recent}">Новинки</a>
+                        <a class="menu-link" href="/books/recent.html"
+                           th:href="@{/books/recent}"
+                           th:text="#{topbar.news}">Новинки</a>
                     </li>
                     <li class="menu-item"
                         th:class="${#httpServletRequest.requestURI == '/books/popular'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
-                        <a class="menu-link" href="/books/popular.html" th:href="@{/books/popular}">Популярное</a>
+                        <a class="menu-link" href="/books/popular.html"
+                           th:href="@{/books/popular}"
+                           th:text="#{topbar.popular}">Популярное</a>
                     </li>
                     <li class="menu-item"
                         th:class="${#httpServletRequest.requestURI == '/authors'} ? 'menu-item menu-item_ACTIVE' : 'menu-link'">
-                        <a class="menu-link" href="/authors/index.html" th:href="@{/authors}">Авторы</a>
+                        <a class="menu-link" href="/authors/index.html"
+                           th:href="@{/authors}"
+                           th:text="#{topbar.authors}">Авторы</a>
                     </li>
                 </ul>
             </nav>
