localize header content

--- a/src/main/resources/spring-frontend/fragments/header_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/header_fragment.html
@@ -25,8 +25,11 @@
                         <div class="search">
                             <form class="form form_search" action="#" method="post" data-searchlimit="20">
                                 <input class="search-input" id="query" name="query" type="text"
-                                       placeholder="Search over 30 million book titles" value=""/>
-                                <button class="search-button" type="submit" name="search" id="search">Поиск
+                                       placeholder="Search over 30 million book titles"
+                                       th:placeholder="#{header.searchPlaceholder}"
+                                       value=""/>
+                                <button class="search-button" type="submit" name="search" id="search"
+                                        th:text="#{header.searchButton}">Поиск
                                 </button>
                             </form>
                         </div>
@@ -70,7 +73,7 @@
                     </div>
                 </div>
                 <div class="row-block Header-trigger"><a class="menuTrigger" href="#navigate">
-                    <div class="menuTrigger-content">Показать навигацию
+                    <div class="menuTrigger-content" th:text="#{header.showNavigation}">Показать навигацию
                     </div>
                     <span></span><span></span><span></span></a>
                 </div>
