--- a/src/main/resources/spring-frontend/fragments/footer_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/footer_fragment.html
@@ -104,19 +104,24 @@
             <div class="row-block">
                 <ul class="menu menu_vt Footer-menu">
                     <li class="menu-item"><a class="menu-link" href="/signin.html"
-                                             th:href="@{/signin}">Войти</a>
+                                             th:href="@{/signin}"
+                                             th:text="#{footer.login}">Войти</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/documents/index.html"
-                                             th:href="@{/documents}">Документы</a>
+                                             th:href="@{/documents}"
+                                             th:text="#{footer.documents}">Документы</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/about.html"
-                                             th:href="@{/about}">О компании</a>
+                                             th:href="@{/about}"
+                                             th:text="#{footer.about}">О компании</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/faq.html"
-                                             th:href="@{/faq}">Помощь</a>
+                                             th:href="@{/faq}"
+                                             th:text="#{footer.help}">Помощь</a>
                     </li>
                     <li class="menu-item"><a class="menu-link" href="/contacts.html"
-                                             th:href="@{/contacts}">Контакты</a>
+                                             th:href="@{/contacts}"
+                                             th:text="#{footer.contacts}">Контакты</a>
                     </li>
                 </ul>
             </div>
