--- a/src/main/resources/spring-frontend/fragments/header_fragment.html
+++ b/src/main/resources/spring-frontend/fragments/header_fragment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
 <header class="Header" th:fragment="headFragment">
     <div class="Header-rowMain">
@@ -7,8 +7,8 @@
             <div class="row">
                 <div class="row-block Header-logo"><a class="logo" href="/"><img class="logo-image"
                                                                                  src="/assets/img/logo.png"
-                                                                                 alt="logo.png"/><span
-                        class="logo-text">BOOKSHOP</span></a>
+                                                                                 alt="logo.png"/>
+                    <span class="logo-text">BOOKSHOP</span></a>
                 </div>
                 <div class="Header-searchWrap row-block">
                     <div class="Header-searchLink">
@@ -23,21 +23,19 @@
                     </div>
                     <div class="Header-search">
                         <div class="search">
-                            <form class="form form_search" action="#" method="post" data-searchlimit="20">
+                            <form class="form form_search" action="#" method="post" data-searchlimit="20"
+                                  th:object="${searchWordDto}">
                                 <input class="search-input" id="query" name="query" type="text"
-                                       placeholder="Search over 30 million book titles"
                                        th:placeholder="#{header.searchPlaceholder}"
-                                       value=""/>
-                                <button class="search-button" type="submit" name="search" id="search"
-                                        th:text="#{header.searchButton}">Поиск
+                                       placeholder="Search over 30 million book titles" th:field="*{example}" value=""/>
+                                <button class="search-button" type="submit" name="search" id="search">Поиск
                                 </button>
                             </form>
                         </div>
                     </div>
                 </div>
                 <div class="row-block Header-cart">
-                    <div class="CartBlock"><a class="CartBlock-block" href="/postponed.html"
-                                              th:href="@{/postponed}">
+                    <div class="CartBlock"><a class="CartBlock-block" href="/postponed.html" th:href="@{/postponed}">
                         <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" height="23" width="23"
                              viewBox="0 0 512 512">
                             <g>
@@ -58,22 +56,23 @@
                                 </g>
                             </g>
                         </svg>
-                        <span class="CartBlock-amount">0</span></a><a class="CartBlock-block" href="/signin.html"
-                                                                      th:href="@{/signin}">
-                        <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" width="22" height="23"
-                             viewBox="0 0 22 23">
-                            <g>
+                        <span class="CartBlock-amount">0</span></a>
+                        <a class="CartBlock-block" href="/signin.html" th:href="@{/signin}">
+                            <svg class="CartBlock-img" xmlns="http://www.w3.org/2000/svg" width="22" height="23"
+                                 viewBox="0 0 22 23">
                                 <g>
-                                    <path fill="#5e5e5e"
-                                          d="M22 23h-1.472c-.284-3.64-2.704-6.69-6.035-7.971a8.196 8.196 0 0 1-3.493.784 8.198 8.198 0 0 1-3.493-.784c-3.33 1.28-5.75 4.331-6.035 7.97H0c.262-3.886 2.635-7.204 6.005-8.884-1.88-1.447-3.091-3.687-3.091-6.209C2.914 3.54 6.534 0 11 0s8.086 3.54 8.086 7.906c0 2.522-1.211 4.762-3.091 6.21C19.365 15.794 21.738 19.112 22 23zM17.616 7.906c0-3.573-2.962-6.469-6.616-6.469-3.654 0-6.616 2.896-6.616 6.47 0 3.572 2.962 6.468 6.616 6.468 3.654 0 6.616-2.896 6.616-6.469z"/>
+                                    <g>
+                                        <path fill="#5e5e5e"
+                                              d="M22 23h-1.472c-.284-3.64-2.704-6.69-6.035-7.971a8.196 8.196 0 0 1-3.493.784 8.198 8.198 0 0 1-3.493-.784c-3.33 1.28-5.75 4.331-6.035 7.97H0c.262-3.886 2.635-7.204 6.005-8.884-1.88-1.447-3.091-3.687-3.091-6.209C2.914 3.54 6.534 0 11 0s8.086 3.54 8.086 7.906c0 2.522-1.211 4.762-3.091 6.21C19.365 15.794 21.738 19.112 22 23zM17.616 7.906c0-3.573-2.962-6.469-6.616-6.469-3.654 0-6.616 2.896-6.616 6.47 0 3.572 2.962 6.468 6.616 6.468 3.654 0 6.616-2.896 6.616-6.469z"/>
+                                    </g>
                                 </g>
-                            </g>
-                        </svg>
-                    </a>
+                            </svg>
+                        </a>
                     </div>
                 </div>
                 <div class="row-block Header-trigger"><a class="menuTrigger" href="#navigate">
-                    <div class="menuTrigger-content" th:text="#{header.showNavigation}">Показать навигацию
+                    <div class="menuTrigger-content"
+                         th:text="#{header.showNavigation}">Показать навигацию
                     </div>
                     <span></span><span></span><span></span></a>
                 </div>
